# mini-duolingo

./: CLAUDE.md  LICENSE  PRD.md  README.md  main.py  pyproject.toml
AI_CHAT_HIST/: AI_CHAT_HIST_260117141643_ADD_FEATURE.txt  AI_CHAT_HIST_2601171455_GEN_PRD.txt  AI_CHAT_HIST_2601171522_CREATE_UI.txt  AI_CHAT_HIST_2601171552_KEEP_GOING.txt
articles/: example.txt
src/: ai_service.py  app.py  question_generator.py  review_strategy.py
src/mini_duolingo/: __init__.py
templates/: index.html  languages.html  result.html  setup.html
